syntax = "proto3";

import "google/protobuf/empty.proto";

package guru.qa.rococo.grpc;

option java_multiple_files = true;
option java_package = "guru.qa.rococo.grpc";
option java_outer_classname = "RococoArtistProto";

service RococoArtistService {
  rpc GetAllArtists(GetAllArtistsRequest) returns (GetAllArtistResponse);
  rpc GetArtistById(GetArtistByIdRequest) returns (Artist);
  rpc CreateArtist(CreateArtistRequest) returns (Artist);
  rpc UpdateArtist(UpdateArtistRequest) returns (Artist);
}

message Artist {
  string id = 1;
  string name = 2;
  string biography = 3;
  string photo = 4;
}

message GetAllArtistsRequest {
  int32 size = 1;
  int64 page = 2;
  optional string name = 3;
}

message GetAllArtistResponse {
  repeated Artist artists = 1;
  int64 total_elements = 2;
  int32 total_pages = 3;
  int32 current_page = 4;
  int32 page_size = 5;
  bool first = 6;
  bool last = 7;
}

message GetArtistByIdRequest {
  string id = 1;
}

message CreateArtistRequest {
  string name = 1;
  string biography = 2;
  string photo = 3;
}

message UpdateArtistRequest {
  string id = 1;
  string name = 2;
  string biography = 3;
  string photo = 4;
}